--- a/package.json
+++ b/package.json
@@ -1,19 +1,26 @@
 {
-  "name": "webpackSSR",
-  "version": "1.0.0",
-  "description": "Build a react SSR structure without CRA",
-  "main": "index.js",
-  "repository": "https://github.com/DeveloperYB/webpackSsrTest.git",
-  "author": "YouBeen Kim <qlqjsk@gmail.com>",
-  "license": "MIT",
-  "dependencies": {
-    "react": "^16.8.4",
-    "react-redux": "^6.0.1",
-    "react-router": "^5.0.0",
-    "react-router-dom": "^5.0.0"
-  },
-  "devDependencies": {
-    "babel-preset-react": "^6.24.1",
-    "webpack": "^4.29.6"
-  }
+    "name": "webpackSSR",
+    "version": "1.0.0",
+    "description": "Build a react SSR structure without CRA",
+    "main": "index.js",
+    "repository": "https://github.com/DeveloperYB/webpackSsrTest.git",
+    "author": "YouBeen Kim <qlqjsk@gmail.com>",
+    "license": "MIT",
+    "dependencies": {
+        "react": "^16.8.4",
+        "react-redux": "^6.0.1",
+        "react-router": "^5.0.0",
+        "react-router-dom": "^5.0.0"
+    },
+    "devDependencies": {
+        "@babel/core": "^7.4.0",
+        "@babel/preset-env": "^7.4.2",
+        "babel-loader": "^8.0.5",
+        "babel-preset-react": "^6.24.1",
+        "webpack": "^4.29.6",
+        "webpack-cli": "^3.3.0"
+    },
+    "scripts": {
+        "start": "webpack --config webpack.config.js"
+    }
 }
