--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "author": "YouBeen Kim <qlqjsk@gmail.com>",
     "license": "MIT",
     "dependencies": {
+        "lodash": "^4.17.11",
         "react": "^16.8.4",
         "react-redux": "^6.0.1",
         "react-router": "^5.0.0",
@@ -21,6 +22,7 @@
         "webpack-cli": "^3.3.0"
     },
     "scripts": {
-        "start": "webpack --config webpack.config.js"
+        "start": "webpack --config webpack.config.js",
+        "build": "webpack"
     }
 }
