--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "author": "YouBeen Kim <qlqjsk@gmail.com>",
     "license": "MIT",
     "dependencies": {
+        "file-loader": "^3.0.1",
         "lodash": "^4.17.11",
         "react": "^16.8.4",
         "react-redux": "^6.0.1",
@@ -18,6 +19,11 @@
         "@babel/preset-env": "^7.4.2",
         "babel-loader": "^8.0.5",
         "babel-preset-react": "^6.24.1",
+        "css-loader": "^2.1.1",
+        "node-sass": "^4.11.0",
+        "sass-loader": "^7.1.0",
+        "style-loader": "^0.23.1",
+        "url-loader": "^1.1.2",
         "webpack": "^4.29.6",
         "webpack-cli": "^3.3.0"
     },
