--- a/package.json
+++ b/package.json
@@ -25,10 +25,12 @@
         "style-loader": "^0.23.1",
         "url-loader": "^1.1.2",
         "webpack": "^4.29.6",
-        "webpack-cli": "^3.3.0"
+        "webpack-cli": "^3.3.0",
+        "webpack-dev-server": "^3.2.1"
     },
     "scripts": {
         "start": "webpack --config webpack.config.js",
+        "start:dev": "webpack-dev-server --hot --inline",
         "build": "webpack"
     }
 }
