--- a/package.json
+++ b/package.json
@@ -19,7 +19,9 @@
         "@babel/preset-env": "^7.4.2",
         "babel-loader": "^8.0.5",
         "babel-preset-react": "^6.24.1",
+        "clean-webpack-plugin": "^2.0.1",
         "css-loader": "^2.1.1",
+        "html-webpack-plugin": "^3.2.0",
         "node-sass": "^4.11.0",
         "sass-loader": "^7.1.0",
         "style-loader": "^0.23.1",
@@ -29,8 +31,7 @@
         "webpack-dev-server": "^3.2.1"
     },
     "scripts": {
-        "start": "webpack --config webpack.config.js",
-        "start:dev": "webpack-dev-server --hot --inline",
-        "build": "webpack"
+        "start": "webpack-dev-server --open --mode development",
+        "build": "webpack --mode production"
     }
 }
