--- a/package.json
+++ b/package.json
@@ -7,16 +7,20 @@
     "author": "YouBeen Kim <qlqjsk@gmail.com>",
     "license": "MIT",
     "dependencies": {
+        "express": "^4.16.4",
         "file-loader": "^3.0.1",
         "lodash": "^4.17.11",
         "react": "^16.8.4",
-        "react-redux": "^6.0.1",
+        "react-dom": "^16.8.6",
         "react-router": "^5.0.0",
         "react-router-dom": "^5.0.0"
     },
     "devDependencies": {
         "@babel/core": "^7.4.0",
+        "@babel/plugin-proposal-class-properties": "^7.4.0",
+        "@babel/plugin-syntax-dynamic-import": "^7.2.0",
         "@babel/preset-env": "^7.4.2",
+        "@babel/preset-react": "^7.0.0",
         "babel-loader": "^8.0.5",
         "babel-preset-react": "^6.24.1",
         "clean-webpack-plugin": "^2.0.1",
